--- a/Pwa-download.html
+++ b/Pwa-download.html
@@ -2,102 +2,168 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Install Le Libido</title>
+
   <link rel="manifest" href="manifest.json" />
-  <link rel="icon" href="le-libido-icon.png" />
-  <meta name="theme-color" content="#950606" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="apple-mobile-web-app-title" content="Le Libido" />
+  <meta name="theme-color" content="#064D95" />
   <link rel="apple-touch-icon" href="le-libido-icon.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
   <style>
+    :root {
+      --gold: #e1bf78;
+      --red: #950606;
+      --blue: #064D95;
+      --green: #06954E;
+      --white: #ffffff;
+      --charcoal: #0d0d0d;
+    }
+
     body {
       margin: 0;
-      padding: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: #000;
-      color: white;
+      background-color: var(--charcoal);
+      color: var(--white);
+      padding: 0;
       text-align: center;
     }
-    .wrapper {
-      padding: 60px 20px;
-      max-width: 600px;
+
+    .container {
+      padding: 40px 20px;
+      max-width: 700px;
       margin: 0 auto;
     }
-    .logo {
-      width: 120px;
-      margin: 0 auto 20px;
+
+    img.logo {
+      max-width: 120px;
       display: block;
+      margin: 30px auto 20px;
     }
-    .title {
-      font-size: 2.2rem;
-      font-weight: bold;
-      margin-bottom: 10px;
-      color: #e1bf78;
+
+    .instructions {
+      background-color: #fff;
+      color: #000;
+      border-radius: 12px;
+      padding: 30px 20px;
+      margin-top: 20px;
     }
-    .subtitle {
-      font-size: 1.1rem;
-      margin-bottom: 30px;
-    }
-    .install-instructions {
-      background-color: #1a1a1a;
-      border-radius: 16px;
-      padding: 20px;
-      margin-bottom: 30px;
-      border: 2px solid #e1bf78;
-    }
-    .share-icon {
-      width: 40px;
-      margin-bottom: 10px;
-    }
-    .instruction-step {
+
+    .instructions h2 {
+      font-size: 1.4rem;
       margin-bottom: 16px;
-      font-size: 1rem;
     }
-    .btn-disabled {
-      background-color: #555;
+
+    .instructions ol {
+      text-align: left;
+      padding-left: 20px;
+      font-size: 1rem;
+      line-height: 1.7;
+    }
+
+    .instructions ol li {
+      margin-bottom: 10px;
+    }
+
+    .instructions img {
+      height: 20px;
+      vertical-align: middle;
+      margin-right: 8px;
+    }
+
+    .install-button {
+      background-color: var(--gold);
+      color: #000;
       border: none;
-      color: #ccc;
-      font-size: 1rem;
-      padding: 14px 30px;
-      border-radius: 8px;
-      cursor: not-allowed;
+      padding: 14px 28px;
+      font-size: 1.1rem;
+      font-weight: bold;
+      border-radius: 10px;
+      cursor: pointer;
+      margin-top: 30px;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
     }
-    .footer {
-      font-size: 0.8rem;
-      color: #777;
-      margin-top: 40px;
+
+    .install-button:hover {
+      background-color: #ffdc8a;
     }
   </style>
 </head>
 <body>
-  <div class="wrapper">
-    <img src="le-libido-icon.png" alt="Le Libido Logo" class="logo" />
-    <div class="title">Install Le Libido</div>
-    <div class="subtitle">To start dating, you’ll need to install the app first. Don’t worry—it’s fast, free, and private.</div>
+  <div class="container">
+    <img src="golden–Le–Libido-logo.png" alt="Le Libido Logo" class="logo" />
 
-    <div class="install-instructions">
-      <img src="share-icon.jpg" alt="Share Icon" class="share-icon" />
-      <div class="instruction-step"><strong>1.</strong> Tap the Share button in Safari (bottom center)</div>
-      <div class="instruction-step"><strong>2.</strong> Scroll down and tap <strong>Add to Home Screen</strong></div>
+    <div class="instructions">
+      <h2>To install the app from Safari on iOS:</h2>
+      <ol>
+        <li><img src="share-icon.jpg" alt="Share Icon"> Tap <strong>Share</strong></li>
+        <li>Scroll down and tap <strong>"Add to Home Screen"</strong></li>
+      </ol>
     </div>
 
-    <button class="btn-disabled">⬆ Add to Home Screen to Continue</button>
-
-    <div class="footer">Need help? Visit <a href="https://whatpwacando.today/installation" target="_blank" style="color: #e1bf78;">this guide</a>.</div>
+    <button class="install-button" id="installBtn">📱 Install to Home Screen</button>
   </div>
 
   <script>
-    // Optional: redirect after install
-    window.addEventListener("appinstalled", () => {
-      window.location.href = "/quiz-new.html";
+    let deferredPrompt;
+
+    window.addEventListener('beforeinstallprompt', (e) => {
+      e.preventDefault();
+      deferredPrompt = e;
+      document.getElementById('installBtn').style.display = 'inline-flex';
     });
 
-    // Analytics: track PWA install intent
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js');
+    document.getElementById('installBtn').addEventListener('click', async () => {
+      // Request Geo
+      if ('geolocation' in navigator) {
+        navigator.geolocation.getCurrentPosition(
+          (pos) => console.log('Geo success:', pos),
+          (err) => console.error('Geo error:', err),
+          { enableHighAccuracy: true }
+        );
+      }
+
+      // Request Push
+      if ('Notification' in window && Notification.permission !== 'granted') {
+        try {
+          await Notification.requestPermission();
+        } catch (err) {
+          console.error('Notification error:', err);
+        }
+      }
+
+      if (deferredPrompt) {
+        deferredPrompt.prompt();
+        const result = await deferredPrompt.userChoice;
+        if (result.outcome === 'accepted') {
+          console.log('PWA installed');
+          window.location.href = '/quiz-new.html';
+        }
+        deferredPrompt = null;
+      } else {
+        // Fallback to iOS behavior
+        alert("Please tap the Share icon and select 'Add to Home Screen' to continue.");
+      }
+    });
+
+    // Detect iOS + Safari
+    const isIOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
+    const isSafari = /^((?!chrome|android).)*safari/i.test(navigator.userAgent);
+    const isStandalone =
+      window.matchMedia('(display-mode: standalone)').matches ||
+      window.navigator.standalone === true;
+
+    if (!isStandalone && isIOS && isSafari) {
+      document.getElementById('installBtn').style.display = 'inline-flex';
     }
+
+    // Analytics-ready install event
+    window.addEventListener('appinstalled', () => {
+      console.log('Le Libido was installed');
+      // Send to analytics if needed
+    });
   </script>
 </body>
 </html>
