--- a/Pwa-download.html
+++ b/Pwa-download.html
@@ -4,160 +4,131 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Install Le Libido</title>
-
-  <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="#064D95" />
-  <link rel="apple-touch-icon" href="le-libido-icon.png" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-
   <style>
-    :root {
-      --gold: #e1bf78;
-      --charcoal: #0d0d0d;
-      --red: #950606;
-    }
-
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: var(--charcoal);
-      color: white;
+      background-color: #0d0d0d;
+      color: #ffffff;
       text-align: center;
-      padding: 0;
-    }
-
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 40px 20px 80px;
+      padding: 30px 20px;
     }
 
     .logo {
       max-width: 120px;
-      margin: 30px auto 20px;
+      margin: 0 auto 30px;
       display: block;
     }
 
-    .instruction-box {
-      background-color: #ffffff;
-      color: #000000;
-      border-radius: 12px;
-      padding: 25px 20px;
-      text-align: left;
+    h1 {
+      font-size: 2rem;
+      color: #e1bf78;
+      text-shadow: 0 0 5px #e1bf78, 0 0 15px #e1bf78;
+      margin-bottom: 10px;
+    }
+
+    p {
       font-size: 1rem;
-      margin-top: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      margin: 10px 0 30px;
+      color: #ccc;
     }
 
-    .instruction-box h2 {
-      font-size: 1.2rem;
-      margin-bottom: 12px;
+    .install-box {
+      background-color: #1a1a1a;
+      border: 2px solid #e1bf78;
+      border-radius: 12px;
+      padding: 20px;
+      margin-bottom: 30px;
+      display: inline-block;
+      text-align: left;
     }
 
-    .instruction-box ol {
-      padding-left: 20px;
-      margin: 0;
+    .step {
+      display: flex;
+      align-items: center;
+      margin-bottom: 16px;
+      gap: 10px;
     }
 
-    .instruction-box li {
-      margin-bottom: 12px;
-      line-height: 1.6;
+    .step img {
+      width: 24px;
+      height: 24px;
     }
 
-    .instruction-box img {
-      height: 22px;
-      vertical-align: middle;
-      margin-right: 8px;
-    }
-
-    .screenshot-row {
+    .screenshots {
       display: flex;
       justify-content: center;
       gap: 10px;
-      margin-top: 20px;
-      flex-wrap: wrap;
+      margin: 20px 0;
     }
 
-    .screenshot-row img {
-      width: 30%;
-      max-width: 180px;
+    .screenshots img {
+      width: 90px;
+      height: 160px;
+      object-fit: cover;
       border-radius: 8px;
-      border: 2px solid #ccc;
+      border: 2px solid #e1bf78;
     }
 
     .install-button {
-      background-color: var(--red);
+      background-color: #950606;
       color: white;
       border: none;
-      padding: 16px 32px;
-      font-size: 1.2rem;
-      border-radius: 10px;
-      margin-top: 30px;
-      cursor: pointer;
-      animation: pulse 2s infinite;
+      padding: 16px 24px;
+      border-radius: 8px;
+      font-size: 1.1rem;
+      font-weight: bold;
+      cursor: not-allowed;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0 auto;
+      gap: 10px;
     }
 
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.06); }
-      100% { transform: scale(1); }
+    .install-button img {
+      width: 20px;
+      height: 20px;
+    }
+
+    .note {
+      margin-top: 20px;
+      color: #888;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
-  <img src="golden–Le–Libido-logo.png" alt="Le Libido Logo" class="logo" />
 
-  <div class="container">
-    <h1>Install Le Libido</h1>
-    <p>To unlock the full experience, please install the app to your home screen.</p>
+  <img src="golden–Le–Libido-logo.png" alt="Le Libido Logo" class="logo">
 
-    <div class="instruction-box">
-      <h2>To install the app from Safari on iOS:</h2>
-      <ol>
-        <li><img src="share-icon.jpg" alt="Share Icon" /> Tap <strong>Share</strong></li>
-        <li>Swipe up and tap <strong>Add to Home Screen</strong></li>
-      </ol>
+  <h1>Install Le Libido</h1>
+  <p>To unlock the full experience, please install the app to your home screen.</p>
+
+  <div class="install-box">
+    <div class="step">
+      <img src="share-icon.jpg" alt="Share Icon">
+      <span><strong>1.</strong> Tap <strong>Share</strong></span>
     </div>
-
-    <div class="screenshot-row">
-      <img src="install-step-1.jpg" alt="Step 1 Screenshot" />
-      <img src="install-step-2.jpg" alt="Step 2 Screenshot" />
-      <img src="install-step-3.jpg" alt="Step 3 Screenshot" />
+    <div class="step">
+      <img src="le-libido-icon.png" alt="Home Icon">
+      <span><strong>2.</strong> Scroll down and tap <strong>Add to Home Screen</strong></span>
     </div>
-
-    <button class="install-button" id="installBtn">📱 Install to Home Screen</button>
   </div>
 
-  <script>
-    let deferredPrompt;
+  <div class="screenshots">
+    <img src="install-step-1.jpg" alt="Step 1">
+    <img src="install-step-2.jpg" alt="Step 2">
+    <img src="install-step-3.jpg" alt="Step 3">
+  </div>
 
-    window.addEventListener('beforeinstallprompt', (e) => {
-      e.preventDefault();
-      deferredPrompt = e;
-    });
+  <div class="install-button">
+    <img src="le-libido-icon.png" alt="Phone Icon">
+    Install to Home Screen
+  </div>
 
-    document.getElementById('installBtn').addEventListener('click', async () => {
-      if (deferredPrompt) {
-        deferredPrompt.prompt();
-        const result = await deferredPrompt.userChoice;
-        if (result.outcome === 'accepted') {
-          window.location.href = '/quiz-new.html';
-        }
-      }
-    });
+  <p class="note">You’ll only need to do this once. After that, you’ll be able to date on the go, anytime.</p>
 
-    // Force full-screen hard stop for non-installed users
-    const isIOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
-    const isStandalone =
-      window.matchMedia('(display-mode: standalone)').matches ||
-      window.navigator.standalone === true;
-
-    if (!isStandalone && isIOS) {
-      // Block navigation unless installed
-      document.getElementById('installBtn').disabled = false;
-    } else if (isStandalone) {
-      window.location.href = '/quiz-new.html';
-    }
-  </script>
 </body>
 </html>
